fixed boat test wrapping

--- a/css/app.css
+++ b/css/app.css
@@ -72,6 +72,7 @@ html, body {
 
 .boat {
     width: 90%;
+    white-space: normal;
 }
 
 .barge {
